# ros2_partol_robot

./: README.md
autopartol_interfaces/: CMakeLists.txt  package.xml
autopartol_robot/: package.xml  setup.py
autopartol_robot/autopartol_robot/: partol_node.py  speaker.py
autopartol_robot/config/: partol_config.yaml
autopartol_robot/launch/: autopartol.launch.py
fishbot_application/: package.xml  setup.py
fishbot_application/fishbot_application/: get_robot_pose.py  init_robot_pose.py  nav_to_pose.py  waypoint_follower.py
fishbot_description/: CMakeLists.txt  package.xml
fishbot_description/config/: display_robot_model.rviz  fishbot_display.rviz  fishbot_ros2_controller.yaml
fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
fishbot_description/urdf/first_robot/: first_robot.gv  first_robot.urdf  first_robot.xacro
fishbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.ros2_control.xacro  fishbot.urdf.xacro
fishbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
fishbot_description/urdf/fishbot/common/: common_colors.xacro  common_inertia.xacro
fishbot_description/urdf/fishbot/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
fishbot_description/urdf/fishbot/senser/: camera.urdf.xacro  (+2 more)
fishbot_description/world/: custom_room1.world
fishbot_description/world/room1/: model.sdf
fishbot_navigation2/: CMakeLists.txt  package.xml
fishbot_navigation2/config/: nav2_params.yaml
fishbot_navigation2/launch/: navigation2.launch.py
fishbot_navigation2/maps/: room.pgm  room.yaml
